added better handling of interploation due to rotation

--- a/cardiacParameters.ipynb
+++ b/cardiacParameters.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 78,
    "id": "a4920efd",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 136,
    "id": "baaaf7b9",
    "metadata": {},
    "outputs": [],
@@ -68,13 +68,15 @@
     "\n",
     "def getContour(img):\n",
     "    #expects there to be only one shape/contour\n",
-    "    c, _ = cv2.findContours(cv2.cvtColor(img, cv2.COLOR_BGR2GRAY), cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_NONE)\n",
+    "    thresh = 127\n",
+    "    im_bw = cv2.threshold(cv2.cvtColor(img, cv2.COLOR_BGR2GRAY), thresh, 255, cv2.THRESH_BINARY)[1]\n",
+    "    c, _ = cv2.findContours(im_bw, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_NONE)\n",
     "    return c[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 121,
    "id": "7a3b9efe",
    "metadata": {},
    "outputs": [],
@@ -123,9 +125,9 @@
     "    for i in range(min(c[:,1]), max(c[:,1])+1):\n",
     "        indices = numpy.where(c[:, 1] == i)[0]\n",
     "        points = c[indices]\n",
-    "        x1 = min(points[:, 0])+0.25\n",
-    "        x2 = max(points[:, 0])-0.25\n",
-    "        r = abs(x2-x1)\n",
+    "        x1 = min(points[:, 0])\n",
+    "        x2 = max(points[:, 0])\n",
+    "        r = abs(x2-x1) / 2\n",
     "        sum += pow(r, 2)*pi\n",
     "\n",
     "    return sum"
@@ -133,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "id": "27954c63",
    "metadata": {},
    "outputs": [
@@ -141,14 +143,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7085143877945154\n"
+      "0.2912179647716839\n"
      ]
     }
    ],
    "source": [
     "#load test data\n",
-    "maskImg1 = Image.open(\"./maskTestdata/0X1BD453F455D30DEA_38.png\")\n",
-    "maskImg2 = Image.open(\"./maskTestdata/0X1BD453F455D30DEA_53.png\")\n",
+    "maskImg1 = Image.open(\"./maskTestdata/0XFEBEEFF93F6FEB9_38.png\")\n",
+    "maskImg2 = Image.open(\"./maskTestdata/0XFEBEEFF93F6FEB9_25.png\")\n",
     "mask1 = cv2.cvtColor(numpy.array(maskImg1), cv2.COLOR_RGB2BGR)\n",
     "mask2 = cv2.cvtColor(numpy.array(maskImg2), cv2.COLOR_RGB2BGR)\n",
     "print(calculate_ejection_fraction(mask1, mask2))\n",
